{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 82,
  "lineage": "91dd5246-19a2-5767-ed2d-3c30619dd5e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "strapi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:internet-gateway/igw-099e63a9f7e6323ec",
            "id": "igw-099e63a9f7e6323ec",
            "owner_id": "816069168735",
            "tags": {
              "Name": "strapi-igw"
            },
            "tags_all": {
              "Name": "strapi-igw"
            },
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069168735:loadbalancer/app/strapi-alb/1243331f75334f16",
            "arn_suffix": "app/strapi-alb/1243331f75334f16",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-672106960.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069168735:loadbalancer/app/strapi-alb/1243331f75334f16",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0364c860b90aa9370"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0416462dea77f2e35"
              },
              {
                "subnet_id": "subnet-095799de8e163a932"
              }
            ],
            "subnets": [
              "subnet-0416462dea77f2e35",
              "subnet-095799de8e163a932"
            ],
            "tags": {
              "Name": "strapi-alb"
            },
            "tags_all": {
              "Name": "strapi-alb"
            },
            "vpc_id": "vpc-0551eaa7f49a29b50",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.strapi_alb_sg",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "strapi_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069168735:listener/app/strapi-alb/1243331f75334f16/43bb26aa5ad307ca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:816069168735:targetgroup/strapi-tg/83e64199c436a684",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069168735:listener/app/strapi-alb/1243331f75334f16/43bb26aa5ad307ca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:816069168735:loadbalancer/app/strapi-alb/1243331f75334f16",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi_alb",
            "aws_lb_target_group.strapi_tg",
            "aws_security_group.strapi_alb_sg",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069168735:targetgroup/strapi-tg/83e64199c436a684",
            "arn_suffix": "targetgroup/strapi-tg/83e64199c436a684",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069168735:targetgroup/strapi-tg/83e64199c436a684",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "strapi-tg"
            },
            "tags_all": {
              "Name": "strapi-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "strapi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:route-table/rtb-0a03ec7361c7090ec",
            "id": "rtb-0a03ec7361c7090ec",
            "owner_id": "816069168735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099e63a9f7e6323ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "strapi-rt"
            },
            "tags_all": {
              "Name": "strapi-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "strapi_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845630efa20b8834",
            "route_table_id": "rtb-0a03ec7361c7090ec",
            "subnet_id": "subnet-095799de8e163a932"
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a32fb24659c66625",
            "route_table_id": "rtb-0a03ec7361c7090ec",
            "subnet_id": "subnet-0416462dea77f2e35"
          },
          "dependencies": [
            "aws_internet_gateway.strapi_igw",
            "aws_route_table.strapi_rt",
            "aws_subnet.strapi_subnet",
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:security-group/sg-0364c860b90aa9370",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0364c860b90aa9370",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "strapi-alb-sg",
            "name_prefix": "",
            "owner_id": "816069168735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-alb-sg"
            },
            "tags_all": {
              "Name": "strapi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strapi_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:security-group/sg-04d09b80be495d08f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d09b80be495d08f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0364c860b90aa9370"
                ],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0364c860b90aa9370"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "strapi-ecs-sg",
            "name_prefix": "",
            "owner_id": "816069168735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-ecs-sg"
            },
            "tags_all": {
              "Name": "strapi-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.strapi_alb_sg",
            "aws_vpc.strapi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "strapi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:subnet/subnet-095799de8e163a932",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095799de8e163a932",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069168735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "strapi-subnet-0"
            },
            "tags_all": {
              "Name": "strapi-subnet-0"
            },
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:subnet/subnet-0416462dea77f2e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0416462dea77f2e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069168735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "strapi-subnet-1"
            },
            "tags_all": {
              "Name": "strapi-subnet-1"
            },
            "vpc_id": "vpc-0551eaa7f49a29b50"
          },
          "dependencies": [
            "aws_vpc.strapi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "strapi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069168735:vpc/vpc-0551eaa7f49a29b50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7fca552d4b17090",
            "default_route_table_id": "rtb-00afd9cdfc6f50b10",
            "default_security_group_id": "sg-0278ac6e769fac913",
            "dhcp_options_id": "dopt-098802fecbc99cf87",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0551eaa7f49a29b50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00afd9cdfc6f50b10",
            "owner_id": "816069168735",
            "tags": {
              "Name": "strapi-vpc"
            },
            "tags_all": {
              "Name": "strapi-vpc"
            }
          }
        }
      ]
    }
  ]
}